--- a/style.css
+++ b/style.css
@@ -61,3 +61,83 @@ body {
     border-radius: 8px;
     padding: 21px 24px;
 }
+
+/* hero section end */
+
+
+/* Why Web Development Section Start  */
+.development-container{
+    background-color: rgba(13, 19, 33, 0.02);
+    width: 1140px;
+    height: 1395px;
+    border-radius: 16px;
+    margin: 80px auto;
+    padding-top: 1px;
+ }
+
+ .development-content{
+    width: 946px;
+    height: auto;
+    margin: 80px auto;
+    text-align: center;
+ }
+
+ 
+ .development-title{
+    font-size: 32px;
+    font-weight: 800;
+ }
+
+ .text-area{
+    color: rgba(13, 19, 33, 0.7);
+    font-weight: 700;
+    margin: 48px;
+
+ }
+
+ .img-area{
+    color: rgba(13, 19, 33, 0.7);
+    font-weight: 700;
+    margin: 48px;
+
+ }
+
+ .development-column-one {
+    display: flex;
+
+ }
+ .development-column-two {
+    display: flex;
+
+ }
+
+.development-column-three {
+   display: flex;
+
+}
+
+.development-column-one {
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(254,254,254,1) 18%, rgba(250,250,251,1) 100%);
+    border-radius: 16px;
+    width: 946px;
+    height: 336px;
+    margin: auto;
+ }
+
+ .development-column-two{
+    background: linear-gradient(90deg, rgba(250,250,251,1) 0%, rgba(255,255,255,1) 58%, rgba(255,255,255,1) 100%);
+    border-radius: 16px;
+    width: 946px;
+    height: 336px;
+    margin: 32px auto;
+ }
+
+ .development-column-three {
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(254,254,254,1) 18%, rgba(250,250,251,1) 100%);
+    border-radius: 16px;
+    width: 946px;
+    height: 336px;
+    margin: 32px auto;
+}
+
+/* Why Web Development Section end  */
