--- a/style.css
+++ b/style.css
@@ -92,14 +92,12 @@ body {
     color: rgba(13, 19, 33, 0.7);
     font-weight: 700;
     margin: 48px;
-
  }
 
  .img-area{
     color: rgba(13, 19, 33, 0.7);
     font-weight: 700;
     margin: 48px;
-
  }
 
  .development-column-one {
@@ -141,3 +139,23 @@ body {
 }
 
 /* Why Web Development Section end  */
+
+/* Inspiration Section Start */
+
+.inspiration-container{
+    max-width: 1140px;
+    height: 777px;
+    text-align: center;
+    margin: 80px auto;
+ }
+ 
+ .inspir-video{
+    width: 1140px;
+    height: 614px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    padding: 30px 0px 0px 0px ;
+ }
+ 
+ /* inspiration Section end */
