--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
 .learn-more-btn {
     width: 159px;
     height: 48px;
+    color: rgb(13, 19, 33);
     font-size: 20px;
     opacity: 0.7;
  }
-
 
 
 /* hero section Start */
@@ -161,17 +161,49 @@ body {
  /* inspiration Section end */
 
 
+
  /* my current target start */
  
 .current-target-text-container{
-    background-color: green;
-    width: 1140px;
-    height: 460px;
-    margin: 150px auto;
-    border: 3px solid red;
+    width: 852px;
+    height: auto;
+    margin: 48px auto;
     text-align: center;
  }
 
 
+  /* My Current Target Items */
+.current-target{
+   width: 1140px;
+   height: auto;
+   margin: auto;
+   display: flex;
+   gap: 24px;
+}
 
-  /* my current target end */
+.html{
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+    margin: 0 ;
+    padding: 40px;
+}
+
+.css{
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+    margin: 0 ;
+    padding: 40px;
+}
+
+.js{
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
+    margin: 0 ;
+    padding: 40px;
+}
+
+.current-target a{
+   color: rgb(13, 19, 33);
+   font-size: 16px;
+   font-weight: 700;
+}
